@@ -999,6 +999,10 @@ GEN     RgX_Rg_mul(GEN y, GEN x);
 GEN     RgX_Rg_sub(GEN y, GEN x);
 GEN     RgX_RgV_eval(GEN Q, GEN x);
 GEN     RgX_add(GEN x, GEN y);
+GEN     RgX_addmulXn_shallow(GEN x, GEN y, long d);
+GEN     RgX_addmulXn(GEN x, GEN y, long d);
+GEN     RgX_addspec(GEN x, GEN y, long nx, long ny);
+GEN     RgX_addspec_shallow(GEN x, GEN y, long nx, long ny);
 GEN     RgX_blocks(GEN P, long n, long m);
 GEN     RgX_deflate(GEN x0, long d);
 GEN     RgX_deriv(GEN x);
